08 Jun 2003 mipsator
 * added support for pkg-config with CHECK_PKG_CONFIG.
 	(added pmk_check_pkg_configi() in func)
 * made version optional in CHECK_CONFIG.
 * updated pmkfile sample.

07 Jun 2003 mipsator
 * cleaned-up and reorganized includes.
 * added autoconf.c and autoconf.h for autoconf compatibility stuff.

05 Jun 2003 mipsator
 * massive changes in func.c to complete check functions.
 	(added missing record_def, record_val and label_set
		and moved some portions of code)

04 Jun 2003 mipsator
 * makes pmkcfg.sh using the same tags as pmk (@DEF__*).
 * updates compat/compat.h.in to use DEF__* tags.

03 Jun 2003 mipsator
 * updated makefile sample to use LIBS and CFLAGS.
 * added CFLAGS and LIBS support in pmk_check_config().
 * added LIBS support in pmk_check_lib().
 * fixed initialisation of the buffer in hash_append().

02 Jun 2003 mipsator
 * improved hash_append().
 * updated hash_test.c to test appending function.

01 Jun 2003 mipsator
 * added hash_append().

31 May 2003 mipsator
 * added strlcat.c and strlcat.h in compat directory.
 * pmkcfg.sh now have a check for strlcat.
 * fully included strlcat in compat.
 * added da_pop() in dynarray and updated relative test.
 * use INC_PATH in pmk_check_include().
 * use LIB_PATH in pmk_check_lib().

28 May 2003 mipsator
 * misc changes in Makefile.
 * changed samples/ac_config.h into samples/ac_config.h.sample .
 * ac_config.h.sample is more complete.

27 May 2003 mipsator
 * record_val() is now functional.
 * use record_val() for almost all tests.
 * fixed/improved parse_ac_config().
 * enabled parse_ac_config() in pmk.

25 May 2003 mipsator
 * few changes related to autoconf compatibility.

23 May 2003 mipsator
 * added AC_COMPAT in pmkfile.sample plus some comments.
 * added samples/ac_config.h for autoconf compatibility test.
 * AC_COMPAT now handle FILENAME to set the configuration file to process.
 * ac_file is now included in pmkdata structure.

22 May 2003 mipsator