@@ -62,4 +62,5 @@ VERSION=1.2
 .CHECK_PKG_CONFIG(gtk_data)
 REQUIRED=FALSE
 TARGET=gtk+
+VERSION=1.2
 .END
